# flsim_min

./: .gitignore  README.md  fl_log.csv  flame-incentives_noise_0.1.txt  flame-incentives_noise_0.2.txt  flame-incentives_noise_0.4.txt  flame-incentives_noise_0.5.txt  flame-incentives_noise_alpha_0.2.txt  flame-incentives_noise_alpha_0.3.txt  flame-incentives_noise_alpha_0.4.txt  flame-incentives_noise_iid.txt  flame-incentives_scale_0.1.txt  flame-incentives_scale_0.2.txt  flame-incentives_scale_0.4.txt  flame-incentives_scale_0.5.txt  flame-incentives_scale_alpha0.2.txt  flame-incentives_scale_alpha0.3.txt  flame-incentives_scale_alpha0.4.txt  flame-incentives_scale_iid.txt  flame-incentives_signflip_0.1.txt  flame-incentives_signflip_0.2.txt  flame-incentives_signflip_0.4.txt  flame-incentives_signflip_0.5.txt  flame-incentives_signflip_alpha0.2.txt  flame-incentives_signflip_alpha0.3.txt  flame-incentives_signflip_alpha0.4.txt  flame-incentives_signflip_iid.txt  flame-incentives_zero_0.1.txt  flame-incentives_zero_0.2.txt  flame-incentives_zero_0.4.txt  flame-incentives_zero_0.5.txt  flame-incentives_zero_alpha0.2.txt  flame-incentives_zero_alpha0.3.txt  flame-incentives_zero_alpha0.4.txt  flame-incentives_zero_iid.txt  ours_noise_alpha_0.2.txt  ours_noise_alpha_0.3.txt  ours_noise_alpha_0.4.txt  ours_noise_iid.txt  ours_noise_task1_0.1.txt  (+44 more)
configs/: exp_base.yaml  exp_default.yaml  exp_fedavg.yaml  exp_flame.yaml  exp_flame_incentives.yaml  exp_flame_no_reputation.yaml  exp_ours.yaml  exp_ours_zero.yaml  exp_plain_fedavg.yaml
flsim.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
(+164 files in other folders)
