[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flsim"
version = "0.1.1"
description = "Slim federated learning simulation with plan-based contracts and FLAME"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "pyyaml"]

[project.optional-dependencies]
detector = ["hdbscan", "scikit-learn"]
data = ["flwr-datasets>=0.2.0", "datasets>=2.17.0", "pillow"]
dev = ["pytest"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["flsim*"]
